--- a/Social_Network/.env
+++ b/Social_Network/.env
@@ -1,3 +1,3 @@
 PORT= 5000
-MONGODB_URI = 'mongodb://127.0.0.1:27017/Social_Network'
-CLE = 'azerty12'
+MONGODB_URI = mongodb://127.0.0.1:27017/Social_Network
+CLE = "azerty12"
